[package]
name = "axum-htmx-todos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.5" }
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tera = "1.15.0"
tokio = { version = "1.18.1", features = ["full"] }
tower = "0.4.12"
tower-http = { version = "0.3.3", features = ["fs"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }

# sqlx = { version = "0.5.10", features = ["runtime-tokio-rustls", "any", "postgres"] }