[package]
edition = "2021"
name = "axum-htmx-todos"
version = "0.1.0"

[workspace]
members = [".", "entity", "migration"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.5"}
chrono = {version = "0.4", features = ["serde"]}
dotenv = "0.15"
entity = {path = "entity"}
migration = {path = "migration"}
sea-orm = {version = "0.8", features = ["runtime-tokio-native-tls", "sqlx-postgres", "macros"], default-features = false}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tera = "1.15"
tokio = {version = "1.18.1", features = ["full"]}
tower = "0.4"
tower-http = {version = "0.3", features = ["fs"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
uuid = {version = "1.0", features = ["serde", "v4"]}
