[package]
edition = "2021"
name = "axum_htmx_todos"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.5", features = ["headers"]}
axum-macros = {version = "0.2"}
chrono = {version = "0.4", features = ["serde"]}
dotenvy = "0.15"
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "uuid", "chrono"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tera = "1.17"
tokio = {version = "1.21.2", features = ["full"]}
tower = "0.4"
tower-http = {version = "0.3", features = ["fs"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
uuid = {version = "1.2", features = ["serde", "v4"]}
